alternativa/parser.output
Terminals unused in grammar

   ARROW
   TERNARY
   CHAIN
   PIPELINE
   SPREAD
   CASE
   CATCH
   DEBUGGER
   DEFAULT
   DELETE
   ENUM
   EXPORT
   EXTENDS
   FINALLY
   IMPLEMENTS
   IMPORT
   IN
   INSTANCEOF
   INTERFACE
   PACKAGE
   SUPER
   SWITCH
   THIS
   THROW
   TRY
   TYPEOF
   WITH
   AWAIT
   YIELD
   STATIC
   AS
   ASYNC
   FROM
   GET
   OF
   SET
   TARGET
   CONSTRUCTOR
   DECLARE
   MODULE
   REQUIRE
   SYMBOL
   TYPE


Grammar

    0 $accept: begin $end

    1 begin: line

    2 line: stmt-list
    3     | %empty

    4 stmt-list: stmt-list stmt
    5          | stmt

    6 stmt: var-declr SEMI
    7     | func-def
    8     | class-def
    9     | expr SEMI
   10     | assign-expr SEMI
   11     | if-stmt
   12     | while-stmt
   13     | do-while-stmt
   14     | for-stmt
   15     | RETURN SEMI
   16     | RETURN expr SEMI
   17     | BREAK SEMI
   18     | CONTINUE SEMI

   19 assign-expr: var-att assignment expr
   20            | ID assignment expr
   21            | vet-idx assignment expr

   22 for-stmt: FOR LPAR assign-expr SEMI expr SEMI expr RPAR LBRACE line RBRACE
   23         | FOR LPAR assign-expr SEMI expr SEMI assign-expr RPAR LBRACE line RBRACE
   24         | FOR LPAR assign-expr SEMI expr SEMI RPAR LBRACE line RBRACE
   25         | FOR LPAR assign-expr SEMI SEMI expr RPAR LBRACE line RBRACE
   26         | FOR LPAR assign-expr SEMI SEMI assign-expr RPAR LBRACE line RBRACE
   27         | FOR LPAR assign-expr SEMI SEMI RPAR LBRACE line RBRACE
   28         | FOR LPAR var-declr SEMI expr SEMI expr RPAR LBRACE line RBRACE
   29         | FOR LPAR var-declr SEMI expr SEMI assign-expr RPAR LBRACE line RBRACE
   30         | FOR LPAR var-declr SEMI expr SEMI RPAR LBRACE line RBRACE
   31         | FOR LPAR var-declr SEMI SEMI expr RPAR LBRACE line RBRACE
   32         | FOR LPAR var-declr SEMI SEMI assign-expr RPAR LBRACE line RBRACE
   33         | FOR LPAR var-declr SEMI SEMI RPAR LBRACE line RBRACE
   34         | FOR LPAR SEMI expr SEMI expr RPAR LBRACE line RBRACE
   35         | FOR LPAR SEMI expr SEMI assign-expr RPAR LBRACE line RBRACE
   36         | FOR LPAR SEMI expr SEMI RPAR LBRACE line RBRACE
   37         | FOR LPAR SEMI SEMI expr RPAR LBRACE line RBRACE
   38         | FOR LPAR SEMI SEMI assign-expr RPAR LBRACE line RBRACE
   39         | FOR LPAR SEMI SEMI RPAR LBRACE line RBRACE

   40 assignment: ASSIGN
   41           | LOGICAL_NULL_ASSIGN
   42           | LOGICAL_AND_ASSIGN
   43           | LOGICAL_OR_ASSIGN
   44           | PLUS_ASSIGN
   45           | SUB_ASSIGN
   46           | MULT_ASSIGN
   47           | DIV_ASSIGN
   48           | EXP_ASSIGN
   49           | REM_ASSIGN
   50           | BITWISE_AND_ASSIGN
   51           | BITWISE_OR_ASSIGN
   52           | BITWISE_XOR_ASSIGN
   53           | LSHIFT_ASSIGN
   54           | RSHIFT_ASSIGN
   55           | RSHIFT_UNSIGNED_ASSIGN

   56 do-while-stmt: DO LBRACE line RBRACE WHILE LPAR expr RPAR
   57              | DO LBRACE line RBRACE WHILE LPAR assign-expr RPAR

   58 while-stmt: WHILE LPAR expr RPAR LBRACE line RBRACE
   59           | WHILE LPAR assign-expr RPAR LBRACE line RBRACE

   60 if-stmt: IF LPAR expr RPAR LBRACE line RBRACE
   61        | IF LPAR expr RPAR LBRACE line RBRACE ELSE LBRACE line RBRACE
   62        | IF LPAR expr RPAR LBRACE line RBRACE ELSE stmt
   63        | IF LPAR assign-expr RPAR LBRACE line RBRACE
   64        | IF LPAR assign-expr RPAR LBRACE line RBRACE ELSE LBRACE line RBRACE
   65        | IF LPAR assign-expr RPAR LBRACE line RBRACE ELSE stmt

   66 logic-expr: expr EQ expr
   67           | expr EQ_STRICT expr
   68           | expr INEQ expr
   69           | expr INEQ_STRICT expr
   70           | expr LT expr
   71           | ID LT expr
   72           | expr LT_EQ expr
   73           | expr GT expr
   74           | expr GT_EQ expr
   75           | expr LOGICAL_NULL expr
   76           | expr LOGICAL_AND expr
   77           | expr LOGICAL_OR expr

   78 class-def: CLASS ID LBRACE class-att-list RBRACE

   79 class-att-list: SEMI class-att-list
   80               | class-att SEMI class-att-list
   81               | class-att
   82               | %empty

   83 class-att: ID COLON var-type
   84          | access-modif ID COLON var-type
   85          | ID LPAR params RPAR LBRACE line RBRACE
   86          | ID LPAR params RPAR COLON var-type LBRACE line RBRACE

   87 access-modif: PUBLIC
   88             | PRIVATE
   89             | PROTECTED

   90 func-def: FUNCTION ID LPAR params RPAR LBRACE line RBRACE
   91         | FUNCTION ID LPAR params RPAR COLON var-type LBRACE line RBRACE

   92 params: COMMA ID
   93       | COMMA ID COLON var-type
   94       | ID COMMA ID
   95       | ID COLON var-type COMMA ID COLON var-type
   96       | ID COLON var-type COMMA ID
   97       | ID COLON var-type
   98       | ID COMMA ID COLON var-type
   99       | %empty

  100 var-declr: LET id-list
  101          | LET id-list ASSIGN expr
  102          | LET id-list ASSIGN obj-def
  103          | LET ID COLON var-type
  104          | LET ID COLON var-type ASSIGN expr
  105          | LET ID COLON var-type LBRACKET RBRACKET
  106          | LET ID COLON var-type LBRACKET RBRACKET ASSIGN expr
  107          | VAR id-list
  108          | VAR id-list ASSIGN expr
  109          | VAR id-list ASSIGN obj-def
  110          | VAR ID COLON var-type
  111          | VAR ID COLON var-type ASSIGN expr
  112          | VAR ID COLON var-type LBRACKET RBRACKET
  113          | VAR ID COLON var-type LBRACKET RBRACKET ASSIGN expr
  114          | CONST_RW id-list ASSIGN expr
  115          | CONST_RW ID COLON var-type ASSIGN expr
  116          | CONST_RW ID COLON var-type LBRACKET RBRACKET ASSIGN expr
  117          | CONST_RW id-list ASSIGN obj-def

  118 id-list: ID COMMA id-list
  119        | ID

  120 obj-def: LBRACE obj-att-list RBRACE

  121 obj-att-list: COMMA obj-att-list
  122             | obj-att COMMA obj-att-list
  123             | obj-att
  124             | %empty

  125 obj-att: ID COLON var-val

  126 var-type: NUMBER
  127         | STRING
  128         | UNKNOWN
  129         | BOOLTYPE
  130         | ANY
  131         | VOID_RW
  132         | NEVER

  133 expr: idx-safe-expr
  134     | idx-unsafe-expr
  135     | LPAR expr RPAR

  136 idx-unsafe-expr: array-expr
  137                | logic-expr
  138                | var-obj

  139 idx-safe-expr: var-val
  140              | var-att
  141              | arit-expr
  142              | bitw-expr
  143              | shift-expr
  144              | unary-expr
  145              | vet-idx
  146              | ID

  147 vet-idx: ID LBRACKET idx-safe-expr RBRACKET

  148 unary-expr: INCREMENT ID
  149           | INCREMENT var-att
  150           | DECREMENT ID
  151           | DECREMENT var-att
  152           | ID INCREMENT
  153           | var-att INCREMENT
  154           | ID DECREMENT
  155           | var-att DECREMENT
  156           | LOGICAL_NOT expr
  157           | BITWISE_NOT expr

  158 arit-expr: expr PLUS expr
  159          | expr SUB expr
  160          | expr MULT expr
  161          | expr DIV expr
  162          | expr EXP expr
  163          | expr REM expr

  164 bitw-expr: expr BITWISE_AND expr
  165          | expr BITWISE_OR expr
  166          | expr BITWISE_XOR expr

  167 shift-expr: expr LSHIFT expr
  168           | expr RSHIFT expr
  169           | expr RSHIFT_UNSIGNED expr

  170 var-att: ID DOT var-att
  171        | var-att DOT ID
  172        | ID DOT var-met
  173        | var-met DOT ID
  174        | var-met DOT var-att
  175        | var-att DOT var-met
  176        | ID DOT ID

  177 var-met: ID LPAR args-list RPAR

  178 args-list: COMMA args-list
  179          | expr COMMA args-list
  180          | assign-expr COMMA args-list
  181          | expr
  182          | assign-expr
  183          | %empty

  184 var-obj: ID LPAR args-list RPAR
  185        | ID LT var-type GT LPAR args-list RPAR
  186        | NEW ID LPAR args-list RPAR
  187        | NEW ID LT var-type GT LPAR args-list RPAR

  188 var-val: INT_VAL
  189        | REAL_VAL
  190        | STR_VAL
  191        | TRUE_RW
  192        | FALSE_RW
  193        | SUB INT_VAL
  194        | SUB REAL_VAL
  195        | SUB STR_VAL
  196        | SUB TRUE_RW
  197        | SUB FALSE_RW
  198        | NULL_RW
  199        | UNDEFINED

  200 array-expr: LBRACKET elmts-list RBRACKET

  201 elmts-list: COMMA elmts-list
  202           | var-val COMMA elmts-list
  203           | var-val
  204           | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
ASSIGN (258) 40 101 102 104 106 108 109 111 113 114 115 116 117
ARROW (259)
COMMA (260) 92 93 94 95 96 98 118 121 122 178 179 180 201 202
SEMI (261) 6 9 10 15 16 17 18 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 79 80
COLON (262) 83 84 86 91 93 95 96 97 98 103 104 105 106 110 111 112
    113 115 116 125
TERNARY (263)
CHAIN (264)
PIPELINE (265)
DOT (266) 170 171 172 173 174 175 176
SPREAD (267)
PLUS (268) 158
INCREMENT (269) 148 149 152 153
PLUS_ASSIGN (270) 44
SUB (271) 159 193 194 195 196 197
DECREMENT (272) 150 151 154 155
SUB_ASSIGN (273) 45
MULT (274) 160
MULT_ASSIGN (275) 46
DIV (276) 161
DIV_ASSIGN (277) 47
EXP (278) 162
EXP_ASSIGN (279) 48
REM (280) 163
REM_ASSIGN (281) 49
BITWISE_NOT (282) 157
BITWISE_AND (283) 164
BITWISE_AND_ASSIGN (284) 50
BITWISE_OR (285) 165
BITWISE_OR_ASSIGN (286) 51
BITWISE_XOR (287) 166
BITWISE_XOR_ASSIGN (288) 52
LOGICAL_NOT (289) 156
LOGICAL_NULL (290) 75
LOGICAL_NULL_ASSIGN (291) 41
LOGICAL_AND (292) 76
LOGICAL_AND_ASSIGN (293) 42
LOGICAL_OR (294) 77
LOGICAL_OR_ASSIGN (295) 43
EQ (296) 66
EQ_STRICT (297) 67
INEQ (298) 68
INEQ_STRICT (299) 69
LT (300) 70 71 185 187
LT_EQ (301) 72
GT (302) 73 185 187
GT_EQ (303) 74
LSHIFT (304) 167
LSHIFT_ASSIGN (305) 53
RSHIFT (306) 168
RSHIFT_ASSIGN (307) 54
RSHIFT_UNSIGNED (308) 169
RSHIFT_UNSIGNED_ASSIGN (309) 55
LPAR (310) 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 56
    57 58 59 60 61 62 63 64 65 85 86 90 91 135 177 184 185 186 187
RPAR (311) 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 56
    57 58 59 60 61 62 63 64 65 85 86 90 91 135 177 184 185 186 187
LBRACE (312) 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
    56 57 58 59 60 61 62 63 64 65 78 85 86 90 91 120
RBRACE (313) 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
    56 57 58 59 60 61 62 63 64 65 78 85 86 90 91 120
LBRACKET (314) 105 106 112 113 116 147 200
RBRACKET (315) 105 106 112 113 116 147 200
INT_VAL (316) 188 193
REAL_VAL (317) 189 194
STR_VAL (318) 190 195
ID (319) 20 71 78 83 84 85 86 90 91 92 93 94 95 96 97 98 103 104 105
    106 110 111 112 113 115 116 118 119 125 146 147 148 150 152 154
    170 171 172 173 176 177 184 185 186 187
BREAK (320) 17
CASE (321)
CATCH (322)
CLASS (323) 78
CONST_RW (324) 114 115 116 117
CONTINUE (325) 18
DEBUGGER (326)
DEFAULT (327)
DELETE (328)
DO (329) 56 57
ELSE (330) 61 62 64 65
ENUM (331)
EXPORT (332)
EXTENDS (333)
FALSE_RW (334) 192 197
FINALLY (335)
FOR (336) 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
FUNCTION (337) 90 91
IF (338) 60 61 62 63 64 65
IMPLEMENTS (339)
IMPORT (340)
IN (341)
INSTANCEOF (342)
INTERFACE (343)
LET (344) 100 101 102 103 104 105 106
NEW (345) 186 187
NULL_RW (346) 198
PACKAGE (347)
PRIVATE (348) 88
PROTECTED (349) 89
PUBLIC (350) 87
RETURN (351) 15 16
SUPER (352)
SWITCH (353)
THIS (354)
THROW (355)
TRUE_RW (356) 191 196
TRY (357)
TYPEOF (358)
VAR (359) 107 108 109 110 111 112 113
VOID_RW (360) 131
WHILE (361) 56 57 58 59
WITH (362)
AWAIT (363)
YIELD (364)
STATIC (365)
AS (366)
ASYNC (367)
FROM (368)
GET (369)
OF (370)
SET (371)
TARGET (372)
ANY (373) 130
BOOLTYPE (374) 129
CONSTRUCTOR (375)
DECLARE (376)
MODULE (377)
REQUIRE (378)
NEVER (379) 132
NUMBER (380) 126
STRING (381) 127
SYMBOL (382)
TYPE (383)
UNDEFINED (384) 199
UNKNOWN (385) 128
E_ID (386)


Nonterminals, with rules where they appear

$accept (132)
    on left: 0
begin (133)
    on left: 1, on right: 0
line (134)
    on left: 2 3, on right: 1 22 23 24 25 26 27 28 29 30 31 32 33 34
    35 36 37 38 39 56 57 58 59 60 61 62 63 64 65 85 86 90 91
stmt-list (135)
    on left: 4 5, on right: 2 4
stmt (136)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18, on right: 4 5 62 65
assign-expr (137)
    on left: 19 20 21, on right: 10 22 23 24 25 26 27 29 32 35 38 57
    59 63 64 65 180 182
for-stmt (138)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39,
    on right: 14
assignment (139)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55, on right:
    19 20 21
do-while-stmt (140)
    on left: 56 57, on right: 13
while-stmt (141)
    on left: 58 59, on right: 12
if-stmt (142)
    on left: 60 61 62 63 64 65, on right: 11
logic-expr (143)
    on left: 66 67 68 69 70 71 72 73 74 75 76 77, on right: 137
class-def (144)
    on left: 78, on right: 8
class-att-list (145)
    on left: 79 80 81 82, on right: 78 79 80
class-att (146)
    on left: 83 84 85 86, on right: 80 81
access-modif (147)
    on left: 87 88 89, on right: 84
func-def (148)
    on left: 90 91, on right: 7
params (149)
    on left: 92 93 94 95 96 97 98 99, on right: 85 86 90 91
var-declr (150)
    on left: 100 101 102 103 104 105 106 107 108 109 110 111 112 113
    114 115 116 117, on right: 6 28 29 30 31 32 33
id-list (151)
    on left: 118 119, on right: 100 101 102 107 108 109 114 117 118
obj-def (152)
    on left: 120, on right: 102 109 117
obj-att-list (153)
    on left: 121 122 123 124, on right: 120 121 122
obj-att (154)
    on left: 125, on right: 122 123
var-type (155)
    on left: 126 127 128 129 130 131 132, on right: 83 84 86 91 93
    95 96 97 98 103 104 105 106 110 111 112 113 115 116 185 187
expr (156)
    on left: 133 134 135, on right: 9 16 19 20 21 22 23 24 25 28 29
    30 31 34 35 36 37 56 58 60 61 62 66 67 68 69 70 71 72 73 74 75
    76 77 101 104 106 108 111 113 114 115 116 135 156 157 158 159 160
    161 162 163 164 165 166 167 168 169 179 181
idx-unsafe-expr (157)
    on left: 136 137 138, on right: 134
idx-safe-expr (158)
    on left: 139 140 141 142 143 144 145 146, on right: 133 147
vet-idx (159)
    on left: 147, on right: 21 145
unary-expr (160)
    on left: 148 149 150 151 152 153 154 155 156 157, on right: 144
arit-expr (161)
    on left: 158 159 160 161 162 163, on right: 141
bitw-expr (162)
    on left: 164 165 166, on right: 142
shift-expr (163)
    on left: 167 168 169, on right: 143
var-att (164)
    on left: 170 171 172 173 174 175 176, on right: 19 140 149 151
    153 155 170 171 174 175
var-met (165)
    on left: 177, on right: 172 173 174 175
args-list (166)
    on left: 178 179 180 181 182 183, on right: 177 178 179 180 184
    185 186 187
var-obj (167)
    on left: 184 185 186 187, on right: 138
var-val (168)
    on left: 188 189 190 191 192 193 194 195 196 197 198 199, on right:
    125 139 202 203
array-expr (169)
    on left: 200, on right: 136
elmts-list (170)
    on left: 201 202 203 204, on right: 200 201 202


State 0

    0 $accept: . begin $end

    INCREMENT    shift, and go to state 1
    SUB          shift, and go to state 2
    DECREMENT    shift, and go to state 3
    BITWISE_NOT  shift, and go to state 4
    LOGICAL_NOT  shift, and go to state 5
    LPAR         shift, and go to state 6
    LBRACKET     shift, and go to state 7
    INT_VAL      shift, and go to state 8
    REAL_VAL     shift, and go to state 9
    STR_VAL      shift, and go to state 10
    ID           shift, and go to state 11
    BREAK        shift, and go to state 12
    CLASS        shift, and go to state 13
    CONST_RW     shift, and go to state 14
    CONTINUE     shift, and go to state 15
    DO           shift, and go to state 16
    FALSE_RW     shift, and go to state 17
    FOR          shift, and go to state 18
    FUNCTION     shift, and go to state 19
    IF           shift, and go to state 20
    LET          shift, and go to state 21
    NEW          shift, and go to state 22
    NULL_RW      shift, and go to state 23
    RETURN       shift, and go to state 24
    TRUE_RW      shift, and go to state 25
    VAR          shift, and go to state 26
    WHILE        shift, and go to state 27
    UNDEFINED    shift, and go to state 28

    $default  reduce using rule 3 (line)

    begin            go to state 29
    line             go to state 30
    stmt-list        go to state 31
    stmt             go to state 32
    assign-expr      go to state 33
    for-stmt         go to state 34
    do-while-stmt    go to state 35
    while-stmt       go to state 36
    if-stmt          go to state 37
    logic-expr       go to state 38
    class-def        go to state 39
    func-def         go to state 40
    var-declr        go to state 41
    expr             go to state 42
    idx-unsafe-expr  go to state 43
    idx-safe-expr    go to state 44
    vet-idx          go to state 45
    unary-expr       go to state 46
    arit-expr        go to state 47
    bitw-expr        go to state 48
    shift-expr       go to state 49
    var-att          go to state 50
    var-met          go to state 51
    var-obj          go to state 52
    var-val          go to state 53
    array-expr       go to state 54


State 1

  148 unary-expr: INCREMENT . ID
  149           | INCREMENT . var-att

    ID  shift, and go to state 55

    var-att  go to state 56
    var-met  go to state 51


State 2

  193 var-val: SUB . INT_VAL
  194        | SUB . REAL_VAL
  195        | SUB . STR_VAL
  196        | SUB . TRUE_RW
  197        | SUB . FALSE_RW

    INT_VAL   shift, and go to state 57
    REAL_VAL  shift, and go to state 58
    STR_VAL   shift, and go to state 59
    FALSE_RW  shift, and go to state 60
    TRUE_RW   shift, and go to state 61


State 3

  150 unary-expr: DECREMENT . ID
  151           | DECREMENT . var-att

    ID  shift, and go to state 62

    var-att  go to state 63
    var-met  go to state 51


State 4

  157 unary-expr: BITWISE_NOT . expr

    INCREMENT    shift, and go to state 1
    SUB          shift, and go to state 2
    DECREMENT    shift, and go to state 3
    BITWISE_NOT  shift, and go to state 4
    LOGICAL_NOT  shift, and go to state 5
    LPAR         shift, and go to state 6
    LBRACKET     shift, and go to state 7
    INT_VAL      shift, and go to state 8
    REAL_VAL     shift, and go to state 9
    STR_VAL      shift, and go to state 10
    ID           shift, and go to state 64
    FALSE_RW     shift, and go to state 17
    NEW          shift, and go to state 22
    NULL_RW      shift, and go to state 23
    TRUE_RW      shift, and go to state 25
    UNDEFINED    shift, and go to state 28

    logic-expr       go to state 38
    expr             go to state 65
    idx-unsafe-expr  go to state 43
    idx-safe-expr    go to state 44
    vet-idx          go to state 66
    unary-expr       go to state 46
    arit-expr        go to state 47
    bitw-expr        go to state 48
    shift-expr       go to state 49
    var-att          go to state 67
    var-met          go to state 51
    var-obj          go to state 52
    var-val          go to state 53
    array-expr       go to state 54


State 5

  156 unary-expr: LOGICAL_NOT . expr

    INCREMENT    shift, and go to state 1
    SUB          shift, and go to state 2
    DECREMENT    shift, and go to state 3
    BITWISE_NOT  shift, and go to state 4
    LOGICAL_NOT  shift, and go to state 5
    LPAR         shift, and go to state 6
    LBRACKET     shift, and go to state 7
    INT_VAL      shift, and go to state 8
    REAL_VAL     shift, and go to state 9
    STR_VAL      shift, and go to state 10
    ID           shift, and go to state 64
    FALSE_RW     shift, and go to state 17
    NEW          shift, and go to state 22
    NULL_RW      shift, and go to state 23
    TRUE_RW      shift, and go to state 25
    UNDEFINED    shift, and go to state 28

    logic-expr       go to state 38
    expr             go to state 68
    idx-unsafe-expr  go to state 43
    idx-safe-expr    go to state 44
    vet-idx          go to state 66
    unary-expr       go to state 46
    arit-expr        go to state 47
    bitw-expr        go to state 48
    shift-expr       go to state 49
    var-att          go to state 67
    var-met          go to state 51
    var-obj          go to state 52
    var-val          go to state 53
    array-expr       go to state 54


State 6

  135 expr: LPAR . expr RPAR

    INCREMENT    shift, and go to state 1
    SUB          shift, and go to state 2
    DECREMENT    shift, and go to state 3
    BITWISE_NOT  shift, and go to state 4
    LOGICAL_NOT  shift, and go to state 5
    LPAR         shift, and go to state 6
    LBRACKET     shift, and go to state 7
    INT_VAL      shift, and go to state 8
    REAL_VAL     shift, and go to state 9
    STR_VAL      shift, and go to state 10
    ID           shift, and go to state 64
    FALSE_RW     shift, and go to state 17
    NEW          shift, and go to state 22
    NULL_RW      shift, and go to state 23
    TRUE_RW      shift, and go to state 25
    UNDEFINED    shift, and go to state 28

    logic-expr       go to state 38
    expr             go to state 69
    idx-unsafe-expr  go to state 43
    idx-safe-expr    go to state 44
    vet-idx          go to state 66
    unary-expr       go to state 46
    arit-expr        go to state 47
    bitw-expr        go to state 48
    shift-expr       go to state 49
    var-att          go to state 67
    var-met          go to state 51
    var-obj          go to state 52
    var-val          go to state 53
    array-expr       go to state 54


State 7

  200 array-expr: LBRACKET . elmts-list RBRACKET

    COMMA      shift, and go to state 70
    SUB        shift, and go to state 2
    INT_VAL    shift, and go to state 8
    REAL_VAL   shift, and go to state 9
    STR_VAL    shift, and go to state 10
    FALSE_RW   shift, and go to state 17
    NULL_RW    shift, and go to state 23
    TRUE_RW    shift, and go to state 25
    UNDEFINED  shift, and go to state 28

    $default  reduce using rule 204 (elmts-list)

    var-val     go to state 71
    elmts-list  go to state 72


State 8

  188 var-val: INT_VAL .

    $default  reduce using rule 188 (var-val)


State 9

  189 var-val: REAL_VAL .

    $default  reduce using rule 189 (var-val)


State 10

  190 var-val: STR_VAL .

    $default  reduce using rule 190 (var-val)


State 11

   20 assign-expr: ID . assignment expr
   71 logic-expr: ID . LT expr
  146 idx-safe-expr: ID .
  147 vet-idx: ID . LBRACKET idx-safe-expr RBRACKET
  152 unary-expr: ID . INCREMENT
  154           | ID . DECREMENT
  170 var-att: ID . DOT var-att
  172        | ID . DOT var-met
  176        | ID . DOT ID
  177 var-met: ID . LPAR args-list RPAR
  184 var-obj: ID . LPAR args-list RPAR
  185        | ID . LT var-type GT LPAR args-list RPAR

    ASSIGN                  shift, and go to state 73
    DOT                     shift, and go to state 74
    INCREMENT               shift, and go to state 75
    PLUS_ASSIGN             shift, and go to state 76
    DECREMENT               shift, and go to state 77
    SUB_ASSIGN              shift, and go to state 78
    MULT_ASSIGN             shift, and go to state 79
    DIV_ASSIGN              shift, and go to state 80
    EXP_ASSIGN              shift, and go to state 81
    REM_ASSIGN              shift, and go to state 82
    BITWISE_AND_ASSIGN      shift, and go to state 83
    BITWISE_OR_ASSIGN       shift, and go to state 84
    BITWISE_XOR_ASSIGN      shift, and go to state 85
    LOGICAL_NULL_ASSIGN     shift, and go to state 86
    LOGICAL_AND_ASSIGN      shift, and go to state 87
    LOGICAL_OR_ASSIGN       shift, and go to state 88
    LT                      shift, and go to state 89
    LSHIFT_ASSIGN           shift, and go to state 90
    RSHIFT_ASSIGN           shift, and go to state 91
    RSHIFT_UNSIGNED_ASSIGN  shift, and go to state 92
    LPAR                    shift, and go to state 93
    LBRACKET                shift, and go to state 94

    $default  reduce using rule 146 (idx-safe-expr)

    assignment  go to state 95


State 12

   17 stmt: BREAK . SEMI

    SEMI  shift, and go to state 96


State 13

   78 class-def: CLASS . ID LBRACE class-att-list RBRACE

    ID  shift, and go to state 97


State 14

  114 var-declr: CONST_RW . id-list ASSIGN expr
  115          | CONST_RW . ID COLON var-type ASSIGN expr
  116          | CONST_RW . ID COLON var-type LBRACKET RBRACKET ASSIGN expr
  117          | CONST_RW . id-list ASSIGN obj-def

    ID  shift, and go to state 98

    id-list  go to state 99


State 15

   18 stmt: CONTINUE . SEMI

    SEMI  shift, and go to state 100


State 16

   56 do-while-stmt: DO . LBRACE line RBRACE WHILE LPAR expr RPAR
   57              | DO . LBRACE line RBRACE WHILE LPAR assign-expr RPAR

    LBRACE  shift, and go to state 101


State 17

  192 var-val: FALSE_RW .

    $default  reduce using rule 192 (var-val)


State 18

   22 for-stmt: FOR . LPAR assign-expr SEMI expr SEMI expr RPAR LBRACE line RBRACE
   23         | FOR . LPAR assign-expr SEMI expr SEMI assign-expr RPAR LBRACE line RBRACE
   24         | FOR . LPAR assign-expr SEMI expr SEMI RPAR LBRACE line RBRACE
   25         | FOR . LPAR assign-expr SEMI SEMI expr RPAR LBRACE line RBRACE
   26         | FOR . LPAR assign-expr SEMI SEMI assign-expr RPAR LBRACE line RBRACE
   27         | FOR . LPAR assign-expr SEMI SEMI RPAR LBRACE line RBRACE
   28         | FOR . LPAR var-declr SEMI expr SEMI expr RPAR LBRACE line RBRACE
   29         | FOR . LPAR var-declr SEMI expr SEMI assign-expr RPAR LBRACE line RBRACE
   30         | FOR . LPAR var-declr SEMI expr SEMI RPAR LBRACE line RBRACE
   31         | FOR . LPAR var-declr SEMI SEMI expr RPAR LBRACE line RBRACE
   32         | FOR . LPAR var-declr SEMI SEMI assign-expr RPAR LBRACE line RBRACE
   33         | FOR . LPAR var-declr SEMI SEMI RPAR LBRACE line RBRACE
   34         | FOR . LPAR SEMI expr SEMI expr RPAR LBRACE line RBRACE
   35         | FOR . LPAR SEMI expr SEMI assign-expr RPAR LBRACE line RBRACE
   36         | FOR . LPAR SEMI expr SEMI RPAR LBRACE line RBRACE
   37         | FOR . LPAR SEMI SEMI expr RPAR LBRACE line RBRACE
   38         | FOR . LPAR SEMI SEMI assign-expr RPAR LBRACE line RBRACE
   39         | FOR . LPAR SEMI SEMI RPAR LBRACE line RBRACE

    LPAR  shift, and go to state 102


State 19

   90 func-def: FUNCTION . ID LPAR params RPAR LBRACE line RBRACE
   91         | FUNCTION . ID LPAR params RPAR COLON var-type LBRACE line RBRACE

    ID  shift, and go to state 103


State 20

   60 if-stmt: IF . LPAR expr RPAR LBRACE line RBRACE
   61        | IF . LPAR expr RPAR LBRACE line RBRACE ELSE LBRACE line RBRACE
   62        | IF . LPAR expr RPAR LBRACE line RBRACE ELSE stmt
   63        | IF . LPAR assign-expr RPAR LBRACE line RBRACE
   64        | IF . LPAR assign-expr RPAR LBRACE line RBRACE ELSE LBRACE line RBRACE
   65        | IF . LPAR assign-expr RPAR LBRACE line RBRACE ELSE stmt

    LPAR  shift, and go to state 104


State 21

  100 var-declr: LET . id-list
  101          | LET . id-list ASSIGN expr
  102          | LET . id-list ASSIGN obj-def
  103          | LET . ID COLON var-type
  104          | LET . ID COLON var-type ASSIGN expr
  105          | LET . ID COLON var-type LBRACKET RBRACKET
  106          | LET . ID COLON var-type LBRACKET RBRACKET ASSIGN expr

    ID  shift, and go to state 105

    id-list  go to state 106


State 22

  186 var-obj: NEW . ID LPAR args-list RPAR
  187        | NEW . ID LT var-type GT LPAR args-list RPAR

    ID  shift, and go to state 107


State 23

  198 var-val: NULL_RW .

    $default  reduce using rule 198 (var-val)


State 24

   15 stmt: RETURN . SEMI
   16     | RETURN . expr SEMI

    SEMI         shift, and go to state 108
    INCREMENT    shift, and go to state 1
    SUB          shift, and go to state 2
    DECREMENT    shift, and go to state 3
    BITWISE_NOT  shift, and go to state 4
    LOGICAL_NOT  shift, and go to state 5
    LPAR         shift, and go to state 6
    LBRACKET     shift, and go to state 7
    INT_VAL      shift, and go to state 8
    REAL_VAL     shift, and go to state 9
    STR_VAL      shift, and go to state 10
    ID           shift, and go to state 64
    FALSE_RW     shift, and go to state 17
    NEW          shift, and go to state 22
    NULL_RW      shift, and go to state 23
    TRUE_RW      shift, and go to state 25
    UNDEFINED    shift, and go to state 28

    logic-expr       go to state 38
    expr             go to state 109
    idx-unsafe-expr  go to state 43
    idx-safe-expr    go to state 44
    vet-idx          go to state 66
    unary-expr       go to state 46
    arit-expr        go to state 47
    bitw-expr        go to state 48
    shift-expr       go to state 49
    var-att          go to state 67
    var-met          go to state 51
    var-obj          go to state 52
    var-val          go to state 53
    array-expr       go to state 54


State 25

  191 var-val: TRUE_RW .

    $default  reduce using rule 191 (var-val)


State 26

  107 var-declr: VAR . id-list
  108          | VAR . id-list ASSIGN expr
  109          | VAR . id-list ASSIGN obj-def
  110          | VAR . ID COLON var-type
  111          | VAR . ID COLON var-type ASSIGN expr
  112          | VAR . ID COLON var-type LBRACKET RBRACKET
  113          | VAR . ID COLON var-type LBRACKET RBRACKET ASSIGN expr

    ID  shift, and go to state 110

    id-list  go to state 111


State 27

   58 while-stmt: WHILE . LPAR expr RPAR LBRACE line RBRACE
   59           | WHILE . LPAR assign-expr RPAR LBRACE line RBRACE

    LPAR  shift, and go to state 112


State 28

  199 var-val: UNDEFINED .

    $default  reduce using rule 199 (var-val)


State 29

    0 $accept: begin . $end

    $end  shift, and go to state 113


State 30

    1 begin: line .

    $default  reduce using rule 1 (begin)


State 31

    2 line: stmt-list .
    4 stmt-list: stmt-list . stmt
